; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_rpc_handshake_error_execute.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_rpc_handshake_error_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_server = type { i32 }
%struct.rpc_handshake_error = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"Rpc error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rpc_server*, i8*, i32)* @rpc_handshake_error_execute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rpc_handshake_error_execute(%struct.rpc_server* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.rpc_server*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.rpc_server* %0, %struct.rpc_server** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.rpc_server*, %struct.rpc_server** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.rpc_handshake_error*
  %10 = getelementptr inbounds %struct.rpc_handshake_error, %struct.rpc_handshake_error* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @rpc_server_seterror(%struct.rpc_server* %7, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %11)
  ret i32 -1
}

declare dso_local i32 @rpc_server_seterror(%struct.rpc_server*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
